dun dun dun! optimizations